[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stepper"
version = "0.1.0"
description = "A tiny dependency-scheduled pipeline framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stepper = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
